Improve file processing workflow and performance